[package]
name = "Madness_Of_Dungeon"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.29.1"
bevy_ecs_ldtk = { version = "0.11.0", features = ["atlas"] }
bevy_ecs_tilemap = "0.15.0"
bevy_rapier2d = "0.28.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
